--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-dotenv==1.0.0
 # Deployment
 whitenoise==6.5.0
 gunicorn==21.2.0
+django-debug-toolbar==4.2.0
 
 # DB Layer
 # psycopg2-binary==3.1.12
