--- a/env.sample
+++ b/env.sample
@@ -1,1 +1,10 @@
 DEBUG=False
+
+SECRET_KEY=<STRONG_KEY_HERE>
+
+# DB_ENGINE=mysql
+# DB_HOST=localhost
+# DB_NAME=appseed_db
+# DB_USERNAME=appseed_db_usr
+# DB_PASS=pass
+# DB_PORT=3306
