--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: rocket-django
+    name: rocket-django-main
     plan: starter
     env: python
     region: frankfurt  # region should be same as your database region.
