--- a/env.sample
+++ b/env.sample
@@ -8,3 +8,9 @@ SECRET_KEY=<STRONG_KEY_HERE>
 # DB_USERNAME=appseed_db_usr
 # DB_PASS=pass
 # DB_PORT=3306
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
