Curate Requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,28 @@
-amqp==5.2.0
-asgiref==3.8.1
-async-timeout==4.0.3
-attrs==23.2.0
-billiard==4.2.0
-celery==5.3.4
-click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-Django==4.2.9
-django-api-generator==1.0.17
-django-browser-reload==1.12.1
-django-celery-results==2.5.1
-django-debug-toolbar==4.2.0
-djangorestframework==3.14.0
-drf-spectacular==0.26.5
-gunicorn==21.2.0
-hiredis==2.2.3
-inflection==0.5.1
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-kombu==5.3.7
-packaging==24.0
-Pillow==10.0.1
-prompt-toolkit==3.0.43
-python-dateutil==2.9.0.post0
+# Core
+django==4.2.9
 python-dotenv==1.0.1
-pytz==2024.1
-PyYAML==6.0.1
-redis==5.0.1
-referencing==0.34.0
-rpds-py==0.18.0
-six==1.16.0
-sqlparse==0.4.4
 str2bool==1.1
-typing_extensions==4.11.0
-tzdata==2024.1
-uritemplate==4.1.1
-vine==5.1.0
-wcwidth==0.2.13
+
+# Utils
+django-debug-toolbar==4.2.0
+django-browser-reload==1.12.1
+Pillow==10.0.1
+
+# Services
+celery==5.3.4
+redis==5.0.1
+hiredis==2.2.3
+
+# Tooling
+django-celery-results==2.5.1
+djangorestframework==3.14.0
+django-api-generator==1.0.17
+drf-spectacular==0.26.5
+
+# Deployment
 whitenoise==6.5.0
+gunicorn==21.2.0
+
+# DB Layer
+# psycopg2-binary==3.1.12
+# mysqlclient==2.2.0
