--- a/env.sample
+++ b/env.sample
@@ -14,3 +14,6 @@ EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
+
+# Uncomment for local Redis
+#CELERY_BROKER_URL=redis://localhost:6379
