--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rocket-django",
   "version": "1.0.0",
-  "description": "<div align=\"center\">\r     <a href=\"https://rocket-django.onrender.com\">\r         <img src=\"https://github-production-user-asset-6210df.s3.amazonaws.com/51070104/272178364-cbac6d97-b2dc-4d95-bab6-891f4ee7d84d.png\"\" width=\"64\" height=\"64\" alt=\"Rocket Icon\">\r     </a>\r     <h1>\r         <a href=\"https://rocket-django.onrender.com\">\r             Rocket Django\r         </a>\r     </h1>\r     <p>\r         <strong>TailwindCSS</strong> &bull; <strong>Flowbite</strong> &bull; <strong>API Generator</strong> &bull; <strong>Celery</strong> &bull; <strong>DataTables</strong> &bull; <strong>Charts</strong> &bull; <strong>Docker</strong> &bull; <strong>CI/CD</strong>\r     </p>    \r </div>",
+  "description": "SaaS Django Starter styled with Tailwind/Flowbite",
   "main": "index.js",
   "directories": {
     "doc": "docs"
@@ -24,10 +24,10 @@
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
-    "flowbite": "^2.5.2",
+    "flowbite": "^3.0.0",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8.5.1",
     "postcss-loader": "^8.1.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.0.0"
   }
 }
