--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
-    name: rocket-django
-    plan: starter
+    name: rocket-django-latest
+    plan: free
     env: python
     region: frankfurt  # region should be same as your database region.
     buildCommand: "./build.sh"
