--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,12 @@ drf-spectacular==0.26.5
 whitenoise==6.5.0
 gunicorn==21.2.0
 
+astor==0.8.1 
+django-jazzmin==3.0.1
+
+# AI
+anthropic==0.34.2
+
 # DB Layer
 # psycopg2-binary==3.1.12
 # mysqlclient==2.2.0
